# ThiefQt

./: .gitignore  CMakeLists.txt  main.cpp  novelwindow.cpp  novelwindow.h  novelwindow.ui  qxtglobal.h
